--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,8 @@
                             <option value="instagram">Instagram</option>
                             <option value="twitch">Twitch</option>
                             <option value="kick">Kick</option>
-                            <option value="vimeo">Vimeo</option>
+                            <option value="facebook">Facebook</option>
+                            <option value="twitter">Twitter (X)</option>
                         </select>
                     </div>
                     <div>
@@ -116,6 +117,8 @@
                             <option value="youtube">YouTube</option>
                             <option value="tiktok">TikTok</option>
                             <option value="instagram">Instagram</option>
+                            <option value="facebook">Facebook</option>
+                            <option value="twitter">Twitter (X)</option>
                         </select>
                     </div>
                     <div>
@@ -263,6 +266,7 @@
                     <button id="btn-kick-voddownload" class="button-dwmusic"><i class="ri-kick-fill"></i> Baixar vods da kick</button>
                     <button id="btn-audio-spotify" class="button-dwmusic"><i class="ri-spotify-fill"></i> Baixar músicas do Spotify</button>
                     <button id="btn-audio-deezer" class="button-dwmusic"><i class="ri-heart-3-fill"></i> Baixar músicas do Deezer</button>
+                    <button id="btn-ssstik" class="button-dwmusic"><i class="ri-tiktok-fill"></i> Baixar mídias do tiktok</button>
                 </div>
                 <p class="hint">
                     Os <b>Plugins Built-In</b> são sites de terceiros imbutidos no Filekit para que você não precise sair do aplicativo. 
@@ -273,6 +277,7 @@
                         kick-video.download<br>
                         spotidownloader.com<br>
                         deezmate.com/en<br>
+                        ssstik.io/pt<br>
                     </p>
                 </p>
             </section>
