--- a/src/index.html
+++ b/src/index.html
@@ -336,6 +336,7 @@
                 <div id="update-progress-fill"></div>
             </div>
             <button id="update-install" class="btn-install hidden">Instalar agora</button>
+            <button id="update-close" class="btn-install hidden">Fechar</button>
         </div>
     </div>
 
